<resources>
    <string name="app_name">MovCompJAGP</string>
    <string name="hola_mundo">Hola mundo</string>
    <color name="color_hola_mundo">#B6473F</color>

    <string name="condicion_1">Condición 1</string>
    <color name="color_condicion_1">#5B6CC6</color>
    <color name="color_background_condicion_1">#D4E342</color>

    <string name="condicion_2">Condición 2</string>
    <color name="color_condicion_2">#B735CD</color>
    <color name="color_background_condicion_2">#ECA134</color>

    <string name="condicion_3">Condición 3</string>
    <color name="color_condicion_3">#2FBC35</color>
    <color name="color_background_condicion_3">#E3493E</color>

    <string name="condicion_4">Condición 4</string>
    <color name="color_condicion_4">#35C6D8</color>
    <color name="color_background_condicion_4">#311137</color>
    <string name="title_activity_aciclo_vida">ACicloVida</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>

    <string-array name="string_array_opciones_dialogo">
        <item>Lunes</item>
        <item>Martes</item>
        <item>Miércoles</item>
    </string-array>


</resources>